--- a/src/app/modules/user/components/profile-qualifications/profile-qualifications.component.scss
+++ b/src/app/modules/user/components/profile-qualifications/profile-qualifications.component.scss
@@ -8,6 +8,6 @@ div.qualification-container {
     display: flex;
 }
 
-.borderBottom {
-    border-bottom: 1px solid black;
-}
+    // .borderBottom {
+    //     border-bottom: 1px solid black;
+    // }
