--- a/src/app/modules/user/components/profile-workplaces/profile-workplaces.component.html
+++ b/src/app/modules/user/components/profile-workplaces/profile-workplaces.component.html
@@ -1,24 +1,23 @@
-<ion-grid>
-    <ion-row>
-  
-        <ion-col size="10">
-            <ion-grid  *ngIf="workplaces !== undefined" >
-                <ion-row>
-                    <ion-col size="4" *ngFor="let workplace of workplaces">
-                        <ion-chip color="primary"  class="margin">
-                            <ion-text (click)="updateWorkplaceModal(workplace)">{{workplace.name}}</ion-text>
-                            <ion-icon name="close" (click)="deleteWorkplace(workplace.id)"></ion-icon>
-                        </ion-chip>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </ion-col>
-        <ion-col size="10" text-center *ngIf="workplaces === undefined || workplaces.length === 0">
-          <ion-text>Add Your Workplaces</ion-text>
-        </ion-col>
-        <ion-col size="2" class="addBtnContainer">
-                <ion-icon name="add" class="addBtn" (click)="addWorkplaceModal()"></ion-icon>
-        </ion-col>
-  
-    </ion-row>
-  </ion-grid>
+
+
+<div class="workplaces-container" class="borderBottom" *ngIf="workplaces !== undefined">
+        <ion-grid>
+            <ion-row>
+                <ion-col size="10">
+                    <ion-badge *ngFor="let workplace of workplaces">
+                        <ion-icon (click)="deleteWorkplace(workplace.id)" name="close"></ion-icon>
+                        <ion-text (click)="updateWorkplaceModal(workplace)">{{workplace.name}}</ion-text>
+                    </ion-badge>
+                    <div  *ngIf="workplaces.length === 0">
+                        <ion-text style="margin-left: 8px">
+                                Add Some Workplaces
+                        </ion-text>
+                    </div>
+                </ion-col>
+                <ion-col size="2" text-right>
+                    <ion-icon size="large" (click)="addWorkplaceModal()" name="add"></ion-icon>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </div>
+    
