Fixed Profile Not Loading Issue

--- a/src/app/modules/home/components/add-prescription/add-prescription.component.html
+++ b/src/app/modules/home/components/add-prescription/add-prescription.component.html
@@ -41,6 +41,6 @@
 
 
 <ion-footer>
-    <ion-button color="primary" expand="block" (click)="savePrescription()" margin>Save</ion-button>
-    <ion-button color="secondary" expand="block" (click)="dismiss()" margin>Cancel</ion-button>
+    <ion-button color="secondary" expand="block" (click)="savePrescription()" margin>Save</ion-button>
+    <ion-button color="primary" expand="block" (click)="dismiss()" margin>Cancel</ion-button>
 </ion-footer>
