--- a/src/app/modules/home/components/prescription-list/prescription-list.component.html
+++ b/src/app/modules/home/components/prescription-list/prescription-list.component.html
@@ -50,5 +50,5 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button color="primary" expand="block" (click)="savePrescription()" margin>Save</ion-button>
+  <ion-button color="secondary" expand="block" (click)="savePrescription()" margin>Save</ion-button>
 </ion-footer>
