--- a/src/app/modules/home/components/add-paramedical/add-paramedical.component.html
+++ b/src/app/modules/home/components/add-paramedical/add-paramedical.component.html
@@ -11,25 +11,25 @@
     <ion-row justify-content-center margin>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label position="floating">BP</ion-label>
+          <ion-label>BP</ion-label>
           <ion-input type="number" placeholder="0.0" [(ngModel)]="paramedicalInfo.bp"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label position="floating">Temperature</ion-label>
+          <ion-label>Temperature</ion-label>
           <ion-input type="number" placeholder="0.0" [(ngModel)]="paramedicalInfo.temperature"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label position="floating">Weight</ion-label>
+          <ion-label>Weight</ion-label>
           <ion-input type="number" placeholder="0.0kg" [(ngModel)]="paramedicalInfo.weight"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label position="floating">Height</ion-label>
+          <ion-label>Height</ion-label>
           <ion-input type="number" placeholder="0.0" [(ngModel)]="paramedicalInfo.height"></ion-input>
         </ion-item>
       </ion-col>
