--- a/src/app/modules/home/components/add-paramedical/add-paramedical.component.html
+++ b/src/app/modules/home/components/add-paramedical/add-paramedical.component.html
@@ -1,6 +1,9 @@
 <ion-header no-border>
   <ion-toolbar color="secondary">
     <ion-buttons slot="start">
+      <ion-button (click)="dismiss()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
       <ion-title>Paramedical Info</ion-title>
     </ion-buttons>
   </ion-toolbar>
@@ -8,29 +11,29 @@
 
 <ion-content>
   <ion-grid no-padding>
-    <ion-row justify-content-center margin>
+    <ion-row>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label>BP</ion-label>
-          <ion-input type="number" placeholder="0.0" [(ngModel)]="paramedicalInfo.bp"></ion-input>
+          <ion-label position="floating">BP</ion-label>
+          <ion-input type="number" [(ngModel)]="paramedicalInfo.bp"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label>Temperature</ion-label>
-          <ion-input type="number" placeholder="0.0" [(ngModel)]="paramedicalInfo.temperature"></ion-input>
+          <ion-label position="floating">Temperature</ion-label>
+          <ion-input type="number" [(ngModel)]="paramedicalInfo.temperature"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label>Weight</ion-label>
-          <ion-input type="number" placeholder="0.0kg" [(ngModel)]="paramedicalInfo.weight"></ion-input>
+          <ion-label position="floating">Weight</ion-label>
+          <ion-input type="number" [(ngModel)]="paramedicalInfo.weight"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="12" margin>
         <ion-item>
-          <ion-label>Height</ion-label>
-          <ion-input type="number" placeholder="0.0" [(ngModel)]="paramedicalInfo.height"></ion-input>
+          <ion-label position="floating" margin>Height</ion-label>
+          <ion-input type="number" [(ngModel)]="paramedicalInfo.height"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
