--- a/src/global.scss
+++ b/src/global.scss
@@ -20,6 +20,15 @@
     height: 90%;
 }
 
+
+.vertical-align-center-view {
+
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    height: 65vh;
+}
+
 ion-modal.half-height {
 
     &.bottom {
