--- a/src/app/modules/user/components/add-session-modal/add-session-modal.component.html
+++ b/src/app/modules/user/components/add-session-modal/add-session-modal.component.html
@@ -19,31 +19,33 @@
   <ion-grid>
     <ion-row *ngIf="arraySession != undefined">
       <ion-col size="12">
-        <ion-item-sliding *ngFor="let session of arraySession">
-          <ion-item-options side="start">
-            <ion-item-option
-              color="danger"
-              (click)="removeSession(session)"
-            >
-              <ion-icon name="trash"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-
-          <ion-item>
-            <ion-icon size="large" name="clock"></ion-icon>
-            <ion-label margin>
-              <h2>{{ session.fromTime }}</h2>
-              <h2>{{ session.toTime }}</h2>
-              <h3>{{ session.interval }}</h3>
-            </ion-label>
-          </ion-item>
-
-          <ion-item-options side="end">
-            <ion-item-option (click)="editSession(session)">
-              <ion-icon name="create"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
+        <ion-list>
+            <ion-item-sliding *ngFor="let session of arraySession">
+                <ion-item-options side="start">
+                  <ion-item-option
+                    color="danger"
+                    (click)="removeSession(session)">
+                    <ion-icon name="trash"></ion-icon>
+                  </ion-item-option>
+                </ion-item-options>
+      
+                <ion-item>
+                  <ion-icon size="large" name="clock"></ion-icon>
+                  <ion-label margin>
+                    <h2>{{ session.fromTime }}</h2>
+                    <h2>{{ session.toTime }}</h2>
+                    <h3>{{ session.interval }}</h3>
+                  </ion-label>
+                </ion-item>
+      
+                <ion-item-options side="end">
+                  <ion-item-option (click)="editSession(session)">
+                    <ion-icon name="create"></ion-icon>
+                  </ion-item-option>
+                </ion-item-options>
+              </ion-item-sliding>
+      
+        </ion-list>
       </ion-col>
       <ion-col
         class="vertical-align-center-view"
