--- a/src/app/modules/user/components/session/session.component.scss
+++ b/src/app/modules/user/components/session/session.component.scss
@@ -1,15 +1,28 @@
-
 ion-row.details {
-    border-bottom: 1px solid lightgray;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 .current {
-    background: blueviolet;
-    color: white;
+  background: blueviolet;
+  color: white;
 }
 
 .heightAdjust {
-    height: 60vh;
+  height: 60vh;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  padding:5px;
+  width: 100%;
+  table-layout: fixed;
+}
+
+.col {
+    justify-content: center;
+    display: flex;
 }
