Ionic Version Downgraded;Changed Package.json,config.xml

--- a/src/app/modules/home/components/add-medical-summary/add-medical-summary.component.html
+++ b/src/app/modules/home/components/add-medical-summary/add-medical-summary.component.html
@@ -1,54 +1,83 @@
 <ion-header no-border>
-    <ion-toolbar color="secondary">
-      <ion-buttons slot="start">
-        <ion-button (click)="dismiss()">
-          <ion-icon name="arrow-back"></ion-icon>
-        </ion-button>
-        <ion-title>Medical Summary</ion-title>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-  
-<ion-content>
-    <ion-grid>
-        <ion-row justify-content-center class="box" >
-          <ion-col size="12" margin>
-            <ion-item *ngFor="let diagnosis of selectedDiagnosis">
-              <p>{{diagnosis}}</p>
-            </ion-item>
-            <ion-item lines="full">
-              <ion-label>Diagnosis</ion-label>
-              <ion-input [(ngModel)]="inputValueDiagnosis" (ionChange)="findMatching('diagnosis')"></ion-input>
-            </ion-item>
+  <ion-toolbar color="secondary">
+    <ion-buttons slot="start">
+      <ion-button (click)="dismiss()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+      <ion-title>Medical Summary</ion-title>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 
-            <ion-list>
-              <ion-item *ngFor="let option of tmpOptionsDiagnosis" (click)="selectDiagnosis(option.name)">
-                {{option.name}}
-              </ion-item>
-            </ion-list>
-          </ion-col>
-        </ion-row>
-      
-        <ion-row justify-content-center class="box">
-          <ion-col size="12" margin>
-              <ion-item *ngFor="let symptoms of selectedSymptoms">
-                  <p>{{symptoms}}</p>
-                </ion-item>
-            <ion-item lines="full">
-              <ion-label>Symptoms</ion-label>
-              <ion-input  [(ngModel)]="inputValueSymptoms" (ionChange)="findMatching('symptoms')"></ion-input>
-            </ion-item>
-            <ion-list>
-                <ion-item *ngFor="let option of tmpOptionsSymptoms" (click)="selectSymptoms(option.name)">
-                  {{option.name}}
-                </ion-item>
-              </ion-list>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-item>
+          <ion-text>
+            Diagnosis
+          </ion-text>
+          <ion-icon
+            slot="end"
+            name="add"
+            (click)="addDiagnosisModal()"
+          ></ion-icon>
+        </ion-item>
+      </ion-col>
+      <ion-col size="12">
+        <ion-list>
+          <ion-item slot="start" *ngFor="let diagnosis of selectedDiagnosis">
+            <ion-label>
+              <h3>{{ diagnosis.name }}</h3>
+            </ion-label>
+
+            <ion-icon
+              slot="end"
+              (click)="removeDiagnosis(diagnosis)"
+              name="close"
+            ></ion-icon>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-item>
+          <ion-text>
+            Symptoms
+          </ion-text>
+          <ion-icon
+            slot="end"
+            name="add"
+            (click)="addSymptomsModal()"
+          ></ion-icon>
+        </ion-item>
+      </ion-col>
+      <ion-col size="12">
+        <ion-list>
+          <ion-item slot="start" *ngFor="let symptoms of selectedSymptoms">
+            <ion-label>
+              <h3>{{ symptoms.name }}</h3>
+            </ion-label>
+
+            <ion-icon
+              slot="end"
+              (click)="removeSymptoms(symptoms)"
+              name="close"
+            ></ion-icon>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
-
 <ion-footer>
-    <ion-button (click)="saveMedicalSummary()" color="secondary" margin expand="block" >Save</ion-button>
-  </ion-footer>
+  <ion-button
+    (click)="saveMedicalSummary()"
+    color="secondary"
+    margin
+    expand="block"
+    >Save</ion-button
+  >
+</ion-footer>
