--- a/src/app/modules/home/components/add-medical-summary/add-medical-summary.component.html
+++ b/src/app/modules/home/components/add-medical-summary/add-medical-summary.component.html
@@ -14,7 +14,7 @@
     <ion-row>
       <ion-col size="12">
         <ion-item>
-          <ion-text>
+          <ion-text color="primary">
             Diagnosis
           </ion-text>
           <ion-icon
@@ -43,7 +43,7 @@
     <ion-row>
       <ion-col size="12">
         <ion-item>
-          <ion-text>
+          <ion-text color="primary">
             Symptoms
           </ion-text>
           <ion-icon
