--- a/src/app/modules/user/components/payment-settings/payment-settings.component.html
+++ b/src/app/modules/user/components/payment-settings/payment-settings.component.html
@@ -1,22 +1,25 @@
 <ion-header>
   <ion-toolbar color="secondary">
     <ion-buttons>
-      <ion-button (click)="back()">
+      <ion-button (click)="dismiss()">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
       <ion-title>Payment Settings</ion-title>
+      <ion-button (click)="updateSettings()" slot="end">
+        <ion-icon name="save"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="paymentSettings.currency != undefined">
 <ion-grid no-padding>
   <ion-row class="vertical-align-center">
     <ion-col class="pd-15" size="10">
       <ion-text>Currency</ion-text>
     </ion-col>
     <ion-col size="2">
-      <ion-input type="text" placeholder="Exmp"></ion-input>
+      <ion-input [(ngModel)]="paymentSettings.currency" type="text" placeholder="Exmp"></ion-input>
     </ion-col>
   </ion-row>
   <ion-row class="vertical-align-center">
@@ -24,7 +27,7 @@
       <ion-text>Amount</ion-text>
     </ion-col>
     <ion-col size="2">
-      <ion-input type="number" placeholder="0.00"></ion-input>
+      <ion-input [(ngModel)]="paymentSettings.amount" type="number" placeholder="0.00"></ion-input>
     </ion-col>
   </ion-row>
 </ion-grid>
