--- a/src/app/modules/user/components/add-session-modal/add-session-modal.component.html
+++ b/src/app/modules/user/components/add-session-modal/add-session-modal.component.html
@@ -1,10 +1,10 @@
-<ion-header>
+<ion-header no-border>
   <ion-toolbar color="secondary">
     <ion-buttons>
       <ion-button (click)="dismiss()">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
-      <ion-title> Add Session For {{ workplace.name }} </ion-title>
+      <ion-title> Add Session For {{ workplace.name}} </ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -32,9 +32,9 @@
                 <ion-item>
                   <ion-icon size="large" name="clock"></ion-icon>
                   <ion-label margin>
-                    <h2>{{ session.fromTime }}</h2>
-                    <h2>{{ session.toTime }}</h2>
-                    <h3>{{ session.interval }}</h3>
+                    <h2>{{ session.fromTime | number:'1.2-2'}}</h2>
+                    <h2>{{ session.toTime | number:'1.2-2' }}</h2>
+                    <h3>{{ session.interval | number:'1.2-2' }}</h3>
                   </ion-label>
                 </ion-item>
       
