--- a/src/app/modules/user/components/add-single-session-modal/add-single-session-modal.component.html
+++ b/src/app/modules/user/components/add-single-session-modal/add-single-session-modal.component.html
@@ -1,5 +1,11 @@
 <ion-header>
-  <ion-toolbar color="primary"> </ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons>
+      <ion-button (click)="dismiss()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -21,7 +27,7 @@
     <ion-row>
       <ion-col size="12">
         <ion-item>
-          <ion-label position="floating">Interval</ion-label>
+          <ion-label position="floating">Interval (Minutes)</ion-label>
           <ion-input [(ngModel)]="session.interval" ></ion-input>
         </ion-item>
       </ion-col>
